refactor(config): standardize,  and homogenize all microservices build process
- Centralize versions for Spring Boot (3.4.5), Java (17), and Spring Cloud (2024.0.0) in root build.gradle.
- Remove redundant plugin and dependency declarations across all microservices (DRY principle).
- Standardize bootJar naming convention for independent deployment.
- Fix Java 17 compatibility,  issues in LocaleConfig.java across all modules.
- Ensure project-wide build consistency and security (SpringDoc 2.8.5).